--- a/config/crd/bases/sfn.services.k8s.aws_activities.yaml
+++ b/config/crd/bases/sfn.services.k8s.aws_activities.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.0
+    controller-gen.kubebuilder.io/version: v0.7.0
   creationTimestamp: null
   name: activities.sfn.services.k8s.aws
 spec:
@@ -34,12 +34,35 @@ spec:
           metadata:
             type: object
           spec:
-            description: ActivitySpec defines the desired state of Activity
+            description: ActivitySpec defines the desired state of Activity.
             properties:
               name:
+                description: "The name of the activity to create. This name must be
+                  unique for your AWS account and region for 90 days. For more information,
+                  see Limits Related to State Machine Executions (https://docs.aws.amazon.com/step-functions/latest/dg/limits.html#service-limits-state-machine-executions)
+                  in the AWS Step Functions Developer Guide. \n A name must not contain:
+                  \n    * white space \n    * brackets < > { } [ ] \n    * wildcard
+                  characters ? * \n    * special characters \" # % \\ ^ | ~ ` $ &
+                  , ; : / \n    * control characters (U+0000-001F, U+007F-009F) \n
+                  To enable logging with CloudWatch Logs, the name should only contain
+                  0-9, A-Z, a-z, - and _."
                 type: string
               tags:
+                description: "The list of tags to add to a resource. \n An array of
+                  key-value pairs. For more information, see Using Cost Allocation
+                  Tags (https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/cost-alloc-tags.html)
+                  in the AWS Billing and Cost Management User Guide, and Controlling
+                  Access Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
+                  \n Tags may only contain Unicode letters, digits, white space, or
+                  these symbols: _ . : / = + - @."
                 items:
+                  description: "Tags are key-value pairs that can be associated with
+                    Step Functions state machines and activities. \n An array of key-value
+                    pairs. For more information, see Using Cost Allocation Tags (https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/cost-alloc-tags.html)
+                    in the AWS Billing and Cost Management User Guide, and Controlling
+                    Access Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
+                    \n Tags may only contain Unicode letters, digits, white space,
+                    or these symbols: _ . : / = + - @."
                   properties:
                     key:
                       type: string
@@ -110,11 +133,9 @@ spec:
                   type: object
                 type: array
               creationDate:
+                description: The date the activity is created.
                 format: date-time
                 type: string
-            required:
-            - ackResourceMetadata
-            - conditions
             type: object
         type: object
     served: true
