--- a/config/crd/bases/sfn.services.k8s.aws_statemachines.yaml
+++ b/config/crd/bases/sfn.services.k8s.aws_statemachines.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.0
+    controller-gen.kubebuilder.io/version: v0.7.0
   creationTimestamp: null
   name: statemachines.sfn.services.k8s.aws
 spec:
@@ -34,11 +34,17 @@ spec:
           metadata:
             type: object
           spec:
-            description: StateMachineSpec defines the desired state of StateMachine
+            description: StateMachineSpec defines the desired state of StateMachine.
             properties:
               definition:
+                description: The Amazon States Language definition of the state machine.
+                  See Amazon States Language (https://docs.aws.amazon.com/step-functions/latest/dg/concepts-amazon-states-language.html).
                 type: string
               loggingConfiguration:
+                description: "Defines what execution history events are logged and
+                  where they are logged. \n By default, the level is set to OFF. For
+                  more information see Log Levels (https://docs.aws.amazon.com/step-functions/latest/dg/cloudwatch-log-level.html)
+                  in the AWS Step Functions User Guide."
                 properties:
                   destinations:
                     items:
@@ -56,11 +62,33 @@ spec:
                     type: string
                 type: object
               name:
+                description: "The name of the state machine. \n A name must not contain:
+                  \n    * white space \n    * brackets < > { } [ ] \n    * wildcard
+                  characters ? * \n    * special characters \" # % \\ ^ | ~ ` $ &
+                  , ; : / \n    * control characters (U+0000-001F, U+007F-009F) \n
+                  To enable logging with CloudWatch Logs, the name should only contain
+                  0-9, A-Z, a-z, - and _."
                 type: string
               roleARN:
+                description: The Amazon Resource Name (ARN) of the IAM role to use
+                  for this state machine.
                 type: string
               tags:
+                description: "Tags to be added when creating a state machine. \n An
+                  array of key-value pairs. For more information, see Using Cost Allocation
+                  Tags (https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/cost-alloc-tags.html)
+                  in the AWS Billing and Cost Management User Guide, and Controlling
+                  Access Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
+                  \n Tags may only contain Unicode letters, digits, white space, or
+                  these symbols: _ . : / = + - @."
                 items:
+                  description: "Tags are key-value pairs that can be associated with
+                    Step Functions state machines and activities. \n An array of key-value
+                    pairs. For more information, see Using Cost Allocation Tags (https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/cost-alloc-tags.html)
+                    in the AWS Billing and Cost Management User Guide, and Controlling
+                    Access Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
+                    \n Tags may only contain Unicode letters, digits, white space,
+                    or these symbols: _ . : / = + - @."
                   properties:
                     key:
                       type: string
@@ -69,11 +97,15 @@ spec:
                   type: object
                 type: array
               tracingConfiguration:
+                description: Selects whether AWS X-Ray tracing is enabled.
                 properties:
                   enabled:
                     type: boolean
                 type: object
               type_:
+                description: Determines whether a Standard or Express state machine
+                  is created. The default is STANDARD. You cannot update the type
+                  of a state machine once it has been created.
                 type: string
             required:
             - definition
@@ -140,11 +172,9 @@ spec:
                   type: object
                 type: array
               creationDate:
+                description: The date the state machine is created.
                 format: date-time
                 type: string
-            required:
-            - ackResourceMetadata
-            - conditions
             type: object
         type: object
     served: true
