--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,15 +1,17 @@
 apiVersion: v1
-name: ack-sfn-controller
-description: A Helm chart for the ACK service controller for sfn
-version: v0.0.2
-appVersion: v0.0.2
-home: https://github.com/aws/aws-controllers-k8s
+name: sfn-chart
+description: A Helm chart for the ACK service controller for AWS Step Functions (Step-Functions)
+version: v0.0.0-non-release-version
+appVersion: v0.0.0-non-release-version
+home: https://github.com/aws-controllers-k8s/sfn-controller
 icon: https://raw.githubusercontent.com/aws/eks-charts/master/docs/logo/aws.png
 sources:
-  - https://github.com/aws/aws-controllers-k8s
+  - https://github.com/aws-controllers-k8s/sfn-controller
 maintainers:
   - name: ACK Admins
-    url: https://github.com/orgs/aws/teams/aws-controllers-for-kubernetes-ack-admins
+    url: https://github.com/orgs/aws-controllers-k8s/teams/ack-admin
+  - name: Step-Functions Admins
+    url: https://github.com/orgs/aws-controllers-k8s/teams/sfn-maintainer
 keywords:
   - aws
   - kubernetes
