--- a/test/e2e/resources/activity.yaml
+++ b/test/e2e/resources/activity.yaml
@@ -4,3 +4,10 @@ metadata:
   name: $ACTIVITY_NAME
 spec:
   name: $ACTIVITY_NAME
+  tags:
+  - key: k1
+    value: v1
+  - key: k2
+    value: v2
+  - key: k3
+    value: v3
