--- a/test/e2e/resources/state_machine.yaml
+++ b/test/e2e/resources/state_machine.yaml
@@ -6,3 +6,10 @@ spec:
   name: $STATE_MACHINE_NAME
   roleARN: $SFN_EXECUTION_ROLE_ARN
   definition: "{ \"StartAt\": \"HelloWorld\", \"States\": { \"HelloWorld\": { \"Type\": \"Pass\", \"Result\": \"Hello World!\", \"End\": true }}}"
+  tags:
+  - key: k1
+    value: v1
+  - key: k2
+    value: v2
+  - key: k3
+    value: v3
