--- a/helm/crds/sfn.services.k8s.aws_statemachines.yaml
+++ b/helm/crds/sfn.services.k8s.aws_statemachines.yaml
@@ -50,7 +50,7 @@ spec:
 
                   By default, the level is set to OFF. For more information see Log Levels
                   (https://docs.aws.amazon.com/step-functions/latest/dg/cloudwatch-log-level.html)
-                  in the AWS Step Functions User Guide.
+                  in the Step Functions User Guide.
                 properties:
                   destinations:
                     items:
@@ -74,17 +74,6 @@ spec:
                   A name must not contain:
 
                     - white space
-
-                    - brackets < > { } [ ]
-
-                    - wildcard characters ? *
-
-                    - special characters " # % \ ^ | ~ ` $ & , ; : /
-
-                    - control characters (U+0000-001F, U+007F-009F)
-
-                  To enable logging with CloudWatch Logs, the name should only contain 0-9,
-                  A-Z, a-z, - and _.
                 type: string
               roleARN:
                 description: The Amazon Resource Name (ARN) of the IAM role to use
@@ -96,8 +85,8 @@ spec:
 
                   An array of key-value pairs. For more information, see Using Cost Allocation
                   Tags (https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/cost-alloc-tags.html)
-                  in the AWS Billing and Cost Management User Guide, and Controlling Access
-                  Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
+                  in the Amazon Web Services Billing and Cost Management User Guide, and Controlling
+                  Access Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
 
                   Tags may only contain Unicode letters, digits, white space, or these symbols:
                   _ . : / = + - @.
@@ -108,8 +97,8 @@ spec:
 
                     An array of key-value pairs. For more information, see Using Cost Allocation
                     Tags (https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/cost-alloc-tags.html)
-                    in the AWS Billing and Cost Management User Guide, and Controlling Access
-                    Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
+                    in the Amazon Web Services Billing and Cost Management User Guide, and Controlling
+                    Access Using IAM Tags (https://docs.aws.amazon.com/IAM/latest/UserGuide/access_iam-tags.html).
 
                     Tags may only contain Unicode letters, digits, white space, or these symbols:
                     _ . : / = + - @.
@@ -121,7 +110,7 @@ spec:
                   type: object
                 type: array
               tracingConfiguration:
-                description: Selects whether AWS X-Ray tracing is enabled.
+                description: Selects whether X-Ray tracing is enabled.
                 properties:
                   enabled:
                     type: boolean
