--- a/apis/v1alpha1/ack-generate-metadata.yaml
+++ b/apis/v1alpha1/ack-generate-metadata.yaml
@@ -1,13 +1,13 @@
 ack_generate_info:
-  build_date: "2025-01-23T02:24:56Z"
-  build_hash: 2442aa071c05fcdf54841e63abd5f91d1951e152
+  build_date: "2025-02-05T16:42:10Z"
+  build_hash: 3d74f13b9de7134b4c76ab7526a9c578c4857602
   go_version: go1.23.5
-  version: v0.41.0
-api_directory_checksum: 679e5320c1786c482397c54c97a2bbe9054d2e5f
+  version: v0.41.0-18-g3d74f13
+api_directory_checksum: 37a570515b6edb6657687d3461cffa4f55f8f64a
 api_version: v1alpha1
-aws_sdk_go_version: v1.44.93
+aws_sdk_go_version: v1.32.6
 generator_config_info:
-  file_checksum: 454d0d8e87016dbb4b53955ac467217940f4f265
+  file_checksum: fce9aefedfcb80ec1caa96bf53fc6a380de9a1a1
   original_file_name: generator.yaml
 last_modification:
   reason: API generation
